# RustyTracer

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  cfg.rs  color.rs  intersectable.rs  lib.rs  light.rs  material.rs  ray.rs  renderer.rs  rotate.rs  shapes.rs  transformations.rs  vector.rs
src/binary/: main.rs
src/shapes/: aabb.rs  naabb.rs  plane.rs  sphere.rs  triangle.rs
