[package]
name = "rusty_tracer"
version = "0.1.0"
authors = ["Arthur Burke <amb556@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
rayon = "1.3.0"
pixels = "0.0.4"
winit = "0.22.2"
winit_input_helper = "0.6.0"
ndarray = { version = "0.13.1", features = ["rayon"]}

[[bin]]
name = "rusty_trace"
path = "./src/binary/main.rs"
test = false
bench = false